--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Avalon React App</title>
   </head>
-  <body style="background-color: blue">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
